// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bucket 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0ArtifactHashD7FD838A": Object {
      "Description": "Artifact hash for asset \\"4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0\\"",
      "Type": "String",
    },
    "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3Bucket7A9635D5": Object {
      "Description": "S3 bucket for asset \\"4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0\\"",
      "Type": "String",
    },
    "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3VersionKeyD76530F8": Object {
      "Description": "S3 key for asset version \\"4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderHandlerF78DF60D": Object {
      "DependsOn": Array [
        "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderRoleD3CF15B6",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3Bucket7A9635D5",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3VersionKeyD76530F8",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3VersionKeyD76530F8",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderRoleD3CF15B6",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderRoleD3CF15B6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "dynamodb:BatchWriteItem",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "TableCD117FA1",
                      "Arn",
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:GetObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:",
                        Object {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::my-seeds-bucket/seeds.json",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DynamoDBSeederCustomResourceEF4D5C60": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Seeds": Object {
          "S3Bucket": "my-seeds-bucket",
          "S3Key": "seeds.json",
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderHandlerF78DF60D",
            "Arn",
          ],
        },
        "TableName": Object {
          "Ref": "TableCD117FA1",
        },
      },
      "Type": "Custom::DynamodbSeeder",
      "UpdateReplacePolicy": "Delete",
    },
    "TableCD117FA1": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AttributeDefinitions": Array [
          Object {
            "AttributeName": "id",
            "AttributeType": "N",
          },
        ],
        "KeySchema": Array [
          Object {
            "AttributeName": "id",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": Object {
          "ReadCapacityUnits": 5,
          "WriteCapacityUnits": 5,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`inline 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0ArtifactHashD7FD838A": Object {
      "Description": "Artifact hash for asset \\"4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0\\"",
      "Type": "String",
    },
    "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3Bucket7A9635D5": Object {
      "Description": "S3 bucket for asset \\"4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0\\"",
      "Type": "String",
    },
    "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3VersionKeyD76530F8": Object {
      "Description": "S3 key for asset version \\"4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderHandlerF78DF60D": Object {
      "DependsOn": Array [
        "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderRoleD3CF15B6",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3Bucket7A9635D5",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3VersionKeyD76530F8",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3VersionKeyD76530F8",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderRoleD3CF15B6",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderRoleD3CF15B6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "dynamodb:BatchWriteItem",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "TableCD117FA1",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DynamoDBSeederCustomResourceEF4D5C60": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Seeds": Object {
          "InlineSeeds": "[{\\"id\\":1,\\"column\\":\\"foo\\"},{\\"id\\":2,\\"column\\":\\"bar\\"}]",
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderHandlerF78DF60D",
            "Arn",
          ],
        },
        "TableName": Object {
          "Ref": "TableCD117FA1",
        },
      },
      "Type": "Custom::DynamodbSeeder",
      "UpdateReplacePolicy": "Delete",
    },
    "TableCD117FA1": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AttributeDefinitions": Array [
          Object {
            "AttributeName": "id",
            "AttributeType": "N",
          },
        ],
        "KeySchema": Array [
          Object {
            "AttributeName": "id",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": Object {
          "ReadCapacityUnits": 5,
          "WriteCapacityUnits": 5,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`json file 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0ArtifactHashD7FD838A": Object {
      "Description": "Artifact hash for asset \\"4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0\\"",
      "Type": "String",
    },
    "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3Bucket7A9635D5": Object {
      "Description": "S3 bucket for asset \\"4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0\\"",
      "Type": "String",
    },
    "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3VersionKeyD76530F8": Object {
      "Description": "S3 key for asset version \\"4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0\\"",
      "Type": "String",
    },
    "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdArtifactHash584F00C3": Object {
      "Description": "Artifact hash for asset \\"d030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffd\\"",
      "Type": "String",
    },
    "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3Bucket8B717ACC": Object {
      "Description": "S3 bucket for asset \\"d030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffd\\"",
      "Type": "String",
    },
    "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3VersionKey88E97CF1": Object {
      "Description": "S3 key for asset version \\"d030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffd\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderHandlerF78DF60D": Object {
      "DependsOn": Array [
        "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderRoleD3CF15B6",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3Bucket7A9635D5",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3VersionKeyD76530F8",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters4c20502c8ee54d52fa9b2e8f0251e77c489e44933dcde320ab40ffdf3a0ad8b0S3VersionKeyD76530F8",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderRoleD3CF15B6",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderRoleD3CF15B6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "dynamodb:BatchWriteItem",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "TableCD117FA1",
                      "Arn",
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:GetObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:",
                        Object {
                          "Ref": "AWS::Partition",
                        },
                        ":s3:::",
                        Object {
                          "Ref": "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3Bucket8B717ACC",
                        },
                        "/",
                        Object {
                          "Fn::Select": Array [
                            0,
                            Object {
                              "Fn::Split": Array [
                                "||",
                                Object {
                                  "Ref": "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3VersionKey88E97CF1",
                                },
                              ],
                            },
                          ],
                        },
                        Object {
                          "Fn::Select": Array [
                            1,
                            Object {
                              "Fn::Split": Array [
                                "||",
                                Object {
                                  "Ref": "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3VersionKey88E97CF1",
                                },
                              ],
                            },
                          ],
                        },
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DynamoDBSeederCustomResourceEF4D5C60": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Seeds": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3Bucket8B717ACC",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3VersionKey88E97CF1",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersd030fc4499f9b92060beabbe94d500033cde3dd8a61a1668fdfcee96b2019ffdS3VersionKey88E97CF1",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomDynamodbSeederDynamoDBSeederCustomResourceProviderHandlerF78DF60D",
            "Arn",
          ],
        },
        "TableName": Object {
          "Ref": "TableCD117FA1",
        },
      },
      "Type": "Custom::DynamodbSeeder",
      "UpdateReplacePolicy": "Delete",
    },
    "TableCD117FA1": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "AttributeDefinitions": Array [
          Object {
            "AttributeName": "id",
            "AttributeType": "N",
          },
        ],
        "KeySchema": Array [
          Object {
            "AttributeName": "id",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": Object {
          "ReadCapacityUnits": 5,
          "WriteCapacityUnits": 5,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;
